Fixed results overflow on mobile

--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,4 +1,5 @@
 .container {
+    max-width: calc(100% - 10rem);
     margin: 0 5rem;
     padding: 4rem;
 
